<resources>
    <string name="app_name">NewsApp</string>
    <string name="head">Heading</string>
    <string name="date">22/10/2002</string>
    <string name="filterBy">Filter News By:</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="author">By:Author Name</string>
    <string name="dummyText">Lorem ipsum dolor sit amet,
        consectetuer adipiscing elit. Aenean commodo ligula eget dolor
        . Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
        nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
        Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. I
        n enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
    </string>
    <string name="sourceUrl">Source:www.google.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_news">No News Available</string>
    <string name="choose_again">choose again</string>
    <string name="waiting_for_the_network">waiting for the network</string>
    <array name="countries">
        <item>Select Country</item>
        <item>ae</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>be</item>
        <item>bg</item>
        <item>br</item>
        <item>ca</item>
        <item>ch</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>de</item>
        <item>eg</item>
        <item>fr</item>
        <item>gb</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>in</item>
        <item>it</item>
        <item>jp</item>
        <item>kr</item>
        <item>lt</item>
        <item>lv</item>
        <item>ma</item>
        <item>mx</item>
        <item>my</item>
        <item>ng</item>
        <item>nl</item>
        <item>no</item>
        <item>nz</item>
        <item>ph</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>rs</item>
        <item>ru</item>
        <item>sa</item>
        <item>se</item>
        <item>sg</item>
        <item>si</item>
        <item>sk</item>
        <item>th</item>
        <item>tr</item>
        <item>tw</item>
        <item>ua</item>
        <item>us</item>
        <item>ve</item>
        <item>za</item>
    </array>
</resources>