<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:background="@drawable/rectangle"
        android:elevation="@dimen/_2sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/head"
            android:textColor="#000"
            android:textSize="@dimen/_20sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="#eee" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/author"
            android:textSize="@dimen/_10sdp" />


        <TextView

            android:id="@+id/newsDetailsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/dummyText"
            android:textSize="@dimen/_18sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="#eee" />

        <TextView
            android:id="@+id/sourceUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="@dimen/_4sdp"
            android:maxLength="50"
            android:text="@string/sourceUrl"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
</ScrollView>